syntax = "proto3";
option go_package = "./";
package proto;

message GetRequest {
  string group = 1;
  string key = 2;
}

message GetResponse {
  bytes value = 1;
  //double minute_qbs = 2;
}

service DaiCache {
  rpc Get(GetRequest) returns (GetResponse);
}